<resources>
    <string name="app_name">FiokaApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="photos">Photos</string>
    <string name="movies">Movies</string>
    <string name="notification">Notification</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="check_internet_title" > Check internet connection </string>
    <string name="check_internet_message" />
    <string name="check_internet_settings" >Check</string>
    <string name="check_internet_cancel">Cancel</string>


    <string-array name="string_array">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notification</item>
        <item>Settings</item>
    </string-array>

</resources>
